# 6-sem-CV-dz-4

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_baseline_mnist_svhn.ipynb  02_dann_mnist_svhn.ipynb  03_cycada_mnist_svhn.ipynb
src/: dann_model.py  dann_train.py  datasets.py  models.py  train_eval.py
