[project]
name = "6-sem-cv-dz-4"
version = "0.1.0"
description = ""
authors = [
    {name = "KruTimurch",email = "teisltvg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
transformers = "^4.52.3"
sentence-transformers = "^4.1.0"
datasets = "^3.6.0"
torch = {version = "^2.7.0", source = "torch-cuda"}
torchvision = {version = "^0.22.0", source = "torch-cuda"}
numpy = "^2.2.6"
pandas = "^2.2.3"
tqdm = "^4.67.1"
notebook = "^7.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
